[package]
name = "dbos-rust"
version = "0.1.0"
edition = "2024"
description = "Rust SDK surface for DBOS durable workflows."
readme = "README.md"
license = "MIT"

[lib]
name = "dbos"
path = "src/lib.rs"

[features]
default = ["postgres"]
postgres = ["dep:tokio-postgres"]
turso = ["dep:turso"]
admin = []
conductor = ["dep:tokio-tungstenite"]
full = ["postgres", "turso", "admin", "conductor"]

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
cron = "0.15"
fast-telemetry = "0.7.1"
futures = "0.3.31"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "1.0.69"
tokio = { version = "1.48.0", features = [
    "io-util",
    "io-std",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "fs",
    "time",
] }
tokio-postgres = { version = "0.7.15", features = [
    "array-impls",
    "with-bit-vec-0_6",
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
], optional = true }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.28.0", optional = true }
tracing = "0.1.41"
turso = { version = "0.6.0-pre.14", optional = true }
urlencoding = "2.1.3"
uuid = { version = "1.11.1", features = ["v4", "v5", "serde", "borsh"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "registry",
] }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(embedded_db)"]

[lints.clippy]
unwrap_used = "deny"
